# robot-assisted-calibration

./: .gitignore  CMakeLists.txt  documentation.md  package.xml
action/: CalculateParameters.action  FindCalibrationObject.action  MoveArm.action
calibration_executive/: CMakeLists.txt  README.md  package.xml
calibration_executive/action/: FindCalibrationObject.action
calibration_executive/config/: parameters.yaml
calibration_executive/launch/: high_level_executive.launch  ur5_startup.launch
calibration_executive/scripts/: CaltabDetectorMock.py  publish_collision_objects.py
calibration_executive/src/robot_assisted_calibration/: HighLevelExecutive.py  MovementController.py  MovementHandler.py
calibration_perception/: CMakeLists.txt  halcon_compile  package.xml
calibration_perception/config/: parameters.yaml
calibration_perception/include/: caltab_detector.h
calibration_perception/launch/: caltab_detector.launch
calibration_perception/src/: alexis_example.cpp  caltab_detector_node.cpp  example_creation.cpp  simple_publisher.cpp
config/: parameters.yaml
launch/: calibration_controller.launch  high_level_executive.launch  lifecam_studio.launch
robot_assisted_calibration/: CMakeLists.txt  package.xml
scripts/: CalibrationController.py  CaltabDetectorMock.py  MoveArmServer.py  MovementController.py  moveit_test.py  plot_joint_trajectory.py  publish_collision_objects.py  simple_client.py
src/robot_assisted_calibration/: HighLevelExecutive.py  MovementController.py  MovementHandler.py
