<?xml version="1.0"?>
<package format="2">
    <name>robot_assisted_calibration</name>
    <version>0.0.1</version>
    <description>The robot_assisted_calibration package</description>

    <maintainer email="bennypi@tzi.de">Benny Prange</maintainer>

    <license>GPLv3</license>

    <url type="website">https://github.com/bennypi/robot_assisted_calibration</url>

    <author email="bennypi@tzi.de">Benny Prange</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>actionlib_msgs</depend>
    <depend>actionlib</depend>

    <export>
    </export>
</package>
