<package>
  <name>robot_assisted_calibration</name>
  <version>0.0.1</version>
  <description>
      Drivers, description, and utilities for Universal Robot Arms.
  </description>

<maintainer email="bennypi@tzi.de">Benny Prange</maintainer>

    <license>GPLv3</license>

    <url type="website">https://github.com/bennypi/robot_assisted_calibration/calibration_executive</url>

    <author email="bennypi@tzi.de">Benny Prange</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>calibration_executive</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
